--- a/Views/Shared/_LayoutPage1.cshtml
+++ b/Views/Shared/_LayoutPage1.cshtml
@@ -15,12 +15,14 @@
         <div class="container-fluid  p-4">
             <div class="row align-items-center">
                 <div class="col-md-2 px-5 py-1">
-                    <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
+                    <a href="#">
+                        <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
+                    </a>
                 </div>
                 <div class="col-md-2 buyticket-area">
-                    <button type="button" class="buyticket-btn btn">
+                    <a href="#" class="buyticket-btn btn">
                         <img src="~/assets/images/subimg/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
-                    </button>
+                    </a>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-gr-1 list-group list-group-horizontal">
